Upgrade to internal build plugins 5.0.3 (#621)
* Upgrade to internal build plugins 5.0.3

* Address review comments