@@ -1,18 +1,4 @@
-
-subprojects { Project subproject ->
-    group "io.micronaut.openapi"
-
-    apply plugin: "io.micronaut.build.internal.common"
-    apply plugin: "io.micronaut.build.internal.dependency-updates"
-    apply plugin: "io.micronaut.build.internal.publishing"
-
-    tasks.withType(Test) {
-        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
-            jvmArgs "--enable-preview"
-        }
-    }
+plugins {
+    id "io.micronaut.build.internal.docs"
+    id "io.micronaut.build.internal.dependency-updates"
 }
-
-
-apply plugin: "io.micronaut.build.internal.docs"
-apply plugin: "io.micronaut.build.internal.dependency-updates"
